--- a/index.html
+++ b/index.html
@@ -2350,7 +2350,7 @@ const getActualStatName = (col) => {
       <table className={`w-full ${darkMode?'text-gray-200':''}`}>
         <thead className={`${darkMode?'bg-gray-700 text-gray-200':'bg-gray-100'} sticky top-[1px] z-20`}>
           <tr>
-            <th className={`px-1 py-3 text-left text-xs font-semibold sticky left-0 ${darkMode?'bg-gray-700 text-gray-200':'bg-gray-100'} z-10`}>#</th>
+            <th className={`px-3 py-3 text-center text-xs font-semibold sticky left-0 ${darkMode?'bg-gray-700 text-gray-200':'bg-gray-100'} z-10`}>#</th>
             {columnsToShow.map(col=>(
               <th key={col} className={`px-1 py-3 text-center text-xs font-semibold ${darkMode?'text-gray-200':''}`}>{col}</th>
             ))}
@@ -2370,7 +2370,7 @@ const getActualStatName = (col) => {
             
             return(
               <tr key={pNum} className={`border-t ${darkMode?'border-gray-700':'border-gray-200'} ${darkMode?'hover:bg-gray-700':'hover:bg-gray-50'} transition-colors group`}>
-  <td className={`px-1 py-2 font-bold sticky left-0 ${darkMode?'bg-gray-800':'bg-white'} ${darkMode?'group-hover:bg-gray-700':'group-hover:bg-gray-50'} z-10 transition-colors`}>{pNum}</td>
+  <td className={`px-3 py-2 font-bold sticky left-0 ${darkMode?'bg-gray-800':'bg-white'} ${darkMode?'group-hover:bg-gray-700':'group-hover:bg-gray-50'} z-10 transition-colors text-center`}>{pNum}</td>
                 {columnsToShow.map(col=>{
   const actualStat = getActualStatName(col);
   const isPIM = col === 'PIM';
@@ -2877,7 +2877,7 @@ setTimeout(() => {
 
       <button
         onClick={()=>setGoalFormCollapsed(!goalFormCollapsed)}
-        className={`w-full ${darkMode?'bg-gradient-to-r from-blue-700 to-blue-600':'bg-gradient-to-r from-blue-600 to-blue-800'} text-white px-4 py-2 font-bold flex items-center justify-between transition-colors hover:opacity-90`}
+        className={`w-full ${darkMode?'bg-gradient-to-r from-blue-700 to-blue-600':'bg-gradient-to-r from-blue-600 to-blue-800'} text-white px-4 py-3 font-bold flex items-center justify-between transition-colors hover:opacity-90`}
       >
         <span>{editingGoalIndex !== null ? `Edit Goal #${editingGoalIndex + 1}` : 'Add Goal'}</span>
         <span className={`transition-transform duration-300 ${goalFormCollapsed ? '' : 'rotate-180'}`}>
