Minor corrections to timeline tab

--- a/index.html
+++ b/index.html
@@ -5173,7 +5173,7 @@ if(isMultiplayer&&matchRef.current&&!matchEnded)matchRef.current.update({current
 
 
 
-{activeTab==='timeline'&&<div className="max-w-4xl mx-auto">
+{activeTab==='timeline'&&<div className="max-w-6xl mx-auto p-4">
               {/* Timeline Content */}
               {(() => {
                 // Combine all events with type
@@ -5212,14 +5212,14 @@ if(isMultiplayer&&matchRef.current&&!matchEnded)matchRef.current.update({current
                 
                 if (allEvents.length === 0) {
                   return (
-                    <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow-lg p-8 text-center`}>
+                    <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-8 text-center`}>
                       <p className={`${darkMode?'text-gray-400':'text-gray-500'}`}>No events recorded yet</p>
                     </div>
                   );
                 }
                 
                 return (
-                  <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow-lg p-4`}>
+                  <div className={`${darkMode?'bg-gray-800 border border-gray-700':'bg-white'} rounded-lg shadow p-4`}>
                     {/* Compact/Detailed Toggle */}
                     <div className="flex justify-end mb-4">
                       <div className="flex gap-1">
