--- a/index.html
+++ b/index.html
@@ -59,16 +59,50 @@
       animation: eq-bar 0.9s ease-in-out infinite alternate;
     }
 
-    .eq-bar:nth-child(1) {
-      animation-delay: 0s
-    }
-
-    .eq-bar:nth-child(2) {
-      animation-delay: 0.15s
-    }
-
     .eq-bar:nth-child(3) {
       animation-delay: 0.3s
+    }
+
+    @keyframes pulse-red {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7);
+      }
+
+      70% {
+        transform: scale(1.05);
+        box-shadow: 0 0 0 10px rgba(239, 68, 68, 0);
+      }
+
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(239, 68, 68, 0);
+      }
+    }
+
+    .pulse-red {
+      animation: pulse-red 1s infinite;
+    }
+
+    @keyframes pulse-blue {
+      0% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(59, 130, 246, 0.7);
+      }
+
+      70% {
+        transform: scale(1.05);
+        box-shadow: 0 0 0 10px rgba(59, 130, 246, 0);
+      }
+
+      100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 0 rgba(59, 130, 246, 0);
+      }
+    }
+
+    .pulse-blue {
+      animation: pulse-blue 1s infinite;
     }
   </style>
 </head>
@@ -292,6 +326,40 @@
             strokeWidth={2}
             d="M5 15l7-7 7 7"
           />
+        </svg>
+      );
+      const IconAudioIntro = () => (
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2" className="w-6 h-6">
+          <circle cx="12" cy="12" r="10.5" />
+          <polygon points="9.14 15.82 9.14 8.18 15.82 12 9.14 15.82" fill="currentColor" />
+        </svg>
+      );
+      const IconAudioGoal = () => (
+        <svg viewBox="0 0 24 24" fill="none" stroke="#ef4444" strokeWidth="2" className="w-6 h-6">
+          <path d="M12,7.25h0A4.79,4.79,0,0,1,16.79,12v6.71a0,0,0,0,1,0,0H7.21a0,0,0,0,1,0,0V12A4.79,4.79,0,0,1,12,7.25Z" />
+          <line x1="12" y1="12.04" x2="12" y2="17.79" />
+          <line x1="10.08" y1="12.04" x2="13.92" y2="12.04" />
+          <line x1="19.67" y1="12.04" x2="23.5" y2="12.04" />
+          <line x1="0.5" y1="12.04" x2="4.33" y2="12.04" />
+          <line x1="12" y1="0.54" x2="12" y2="4.38" />
+          <line x1="3.87" y1="3.91" x2="6.58" y2="6.62" />
+          <line x1="17.42" y1="6.62" x2="20.13" y2="3.91" />
+        </svg>
+      );
+      const IconAudioPenalty = () => (
+        <svg viewBox="0 0 24 24" fill="none" stroke="#3b82f6" strokeWidth="1.5" className="w-6 h-6">
+          <path d="M13.91,10.09H8.18a1.93,1.93,0,0,0-1.53.76L4.36,13.91l-2.86.95v5.73H4.36a1.91,1.91,0,0,1,3.82,0h6.68a1.91,1.91,0,0,1,3.82,0H22.5V15.82l-4.77-1.91-2.29-3.06A1.91,1.91,0,0,0,13.91,10.09Z" />
+          <circle cx="16.77" cy="20.59" r="1.91" />
+          <circle cx="6.27" cy="20.59" r="1.91" />
+          <line x1="20.1" y1="14.86" x2="7.23" y2="14.86" />
+          <line x1="20.59" y1="17.73" x2="22.5" y2="17.73" />
+          <line x1="12" y1="14.86" x2="12" y2="12" />
+          <path d="M11,6.27h0A1.91,1.91,0,0,1,13,8.18v1.91a0,0,0,0,1,0,0H9.14a0,0,0,0,1,0,0V8.18A1.91,1.91,0,0,1,11,6.27Z" />
+          <line x1="5.32" y1="7.23" x2="7.23" y2="7.23" />
+          <line x1="14.86" y1="7.23" x2="16.77" y2="7.23" />
+          <line x1="7" y1="3.18" x2="8.35" y2="4.53" />
+          <line x1="13.75" y1="4.53" x2="15.1" y2="3.18" />
+          <line x1="11.05" y1="3.41" x2="11.05" y2="1.5" />
         </svg>
       );
 
@@ -5584,7 +5652,7 @@
                       </>
                     ) : (
                       <>
-                        <span className="text-lg">▶</span>
+                        <IconAudioIntro />
                         <span className="text-xs">Intro</span>
                       </>
                     )}
@@ -5593,8 +5661,8 @@
                   {/* Goal */}
                   <button
                     onClick={() => playingSound === 'homeGoal' ? stopAllSounds() : playSound('homeGoal')}
-                    className={`p-3 rounded-lg font-semibold transition-colors flex flex-col items-center justify-center gap-1 ${playingSound === 'homeGoal'
-                      ? (darkMode ? 'bg-blue-700 text-white' : 'bg-blue-600 text-white')
+                    className={`p-3 rounded-lg font-semibold transition-all flex flex-col items-center justify-center gap-1 ${playingSound === 'homeGoal'
+                      ? (darkMode ? 'bg-red-700 text-white pulse-red animate-pulse' : 'bg-red-600 text-white pulse-red')
                       : (darkMode ? 'bg-gray-700 hover:bg-gray-600 text-gray-200' : 'bg-gray-100 hover:bg-gray-200 text-gray-800')
                       }`}
                   >
@@ -5609,7 +5677,7 @@
                       </>
                     ) : (
                       <>
-                        <span className="text-lg">🚨</span>
+                        <IconAudioGoal />
                         <span className="text-xs">Goal</span>
                       </>
                     )}
@@ -5618,8 +5686,8 @@
                   {/* Penalty */}
                   <button
                     onClick={() => playingSound === 'awayPenalty' ? stopAllSounds() : playSound('awayPenalty')}
-                    className={`p-3 rounded-lg font-semibold transition-colors flex flex-col items-center justify-center gap-1 ${playingSound === 'awayPenalty'
-                      ? (darkMode ? 'bg-orange-700 text-white' : 'bg-orange-600 text-white')
+                    className={`p-3 rounded-lg font-semibold transition-all flex flex-col items-center justify-center gap-1 ${playingSound === 'awayPenalty'
+                      ? (darkMode ? 'bg-blue-700 text-white pulse-blue animate-pulse' : 'bg-blue-600 text-white pulse-blue')
                       : (darkMode ? 'bg-gray-700 hover:bg-gray-600 text-gray-200' : 'bg-gray-100 hover:bg-gray-200 text-gray-800')
                       }`}
                   >
@@ -5634,7 +5702,7 @@
                       </>
                     ) : (
                       <>
-                        <span className="text-lg">🚔</span>
+                        <IconAudioPenalty />
                         <span className="text-xs">Penalty</span>
                       </>
                     )}
