--- a/index.html
+++ b/index.html
@@ -2658,7 +2658,7 @@
                           setCurrentPeriod(4);
                           if (isMultiplayer && matchRef.current && !matchEnded) matchRef.current.update({ currentPeriod: 4 });
                         }}
-                        disabled={matchEnded || isViewer}
+                        disabled={isViewer}
                         className={`px-3 py-1 rounded font-bold text-base ${currentPeriod === 4 ? 'bg-yellow-400 text-blue-900' : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'}`}
                       >
                         OT
@@ -2672,13 +2672,13 @@
                           setCurrentPeriod(4);
                           if (isMultiplayer && matchRef.current && !matchEnded) matchRef.current.update({ periodStats: updated, currentPeriod: 4 });
                         }}
-                        disabled={matchEnded || isViewer}
+                        disabled={isViewer}
                         className={`px-3 py-1 rounded font-bold text-base ${darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'}`}
                       >
                         +OT
                       </button>
                     )}
-                    {matchEnded && <span className="bg-gray-500 px-2 py-1 rounded text-xs font-bold whitespace-nowrap">GAME ENDED</span>}
+
                   </div>
 
                   <button
@@ -4647,8 +4647,8 @@
                       {[1, 2, 3].map(p => <button key={p} onClick={() => {
                         setCurrentPeriod(p);
                         if (isMultiplayer && matchRef.current && !matchEnded) matchRef.current.update({ currentPeriod: p })
-                      }} disabled={matchEnded || isViewer} className={`px-3 py-1 rounded font-bold ${currentPeriod === p ? 'bg-yellow-400 text-blue-900' : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'}`}>{p}</button>)}
-                      {periodStats[4] && <button onClick={() => { setCurrentPeriod(4); if (isMultiplayer && matchRef.current && !matchEnded) matchRef.current.update({ currentPeriod: 4 }) }} disabled={matchEnded || isViewer} className={`px-2 py-1 rounded text-sm font-bold ${currentPeriod === 4 ? 'bg-yellow-400 text-blue-900' : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'}`}>OT</button>}
+                      }} disabled={isViewer} className={`px-3 py-1 rounded font-bold ${currentPeriod === p ? 'bg-yellow-400 text-blue-900' : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'}`}>{p}</button>)}
+                      {periodStats[4] && <button onClick={() => { setCurrentPeriod(4); if (isMultiplayer && matchRef.current && !matchEnded) matchRef.current.update({ currentPeriod: 4 }) }} disabled={isViewer} className={`px-2 py-1 rounded text-sm font-bold ${currentPeriod === 4 ? 'bg-yellow-400 text-blue-900' : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'}`}>OT</button>}
                       {!periodStats[4] && currentPeriod === 3 && (
                         <button
                           onClick={() => {
@@ -4659,7 +4659,7 @@
                               matchRef.current.update({ periodStats: updated, currentPeriod: 4 });
                             }
                           }}
-                          disabled={matchEnded || isViewer}
+                          disabled={isViewer}
                           className={`px-2 py-1 rounded text-sm font-bold ${darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'}`}
                         >
                           +OT
@@ -4673,7 +4673,7 @@
                       >
                         ⇄
                       </button>
-                      {matchEnded && <span className="bg-gray-500 px-2 py-1 rounded text-xs font-bold whitespace-nowrap">GAME ENDED</span>}
+
                     </div>
                     <button
                       onClick={() => setFocusMode(null)}
@@ -5483,7 +5483,7 @@
                     <div className="mb-6 sm:mb-8 relative">
                       <div className={`absolute left-1/2 top-0 bottom-0 w-0.5 ${darkMode ? 'bg-gray-600' : 'bg-gray-300'} transform -translate-x-1/2`}></div>
                       <div className="relative z-10 flex flex-col items-center justify-center">
-                        <div className={`w-12 h-12 rounded-full ${darkMode ? 'bg-gray-800 border-2 border-gray-600' : 'bg-white border-2 border-gray-300'} flex items-center justify-center mb-2 shadow-sm`}>
+                        <div className={`w-12 h-12 rounded-full ${darkMode ? 'bg-gray-800 border-2 border-gray-600 text-yellow-500' : 'bg-white border-2 border-gray-300 text-gray-600'} flex items-center justify-center mb-2 shadow-sm`}>
                           <GameEndedIcon />
                         </div>
 
