--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </svg>
       );
       const IconAudioPenalty = () => (
-        <svg viewBox="0 0 24 24" fill="none" stroke="#3b82f6" strokeWidth="1.5" className="w-6 h-6">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="1.5" className="w-6 h-6">
           <path d="M13.91,10.09H8.18a1.93,1.93,0,0,0-1.53.76L4.36,13.91l-2.86.95v5.73H4.36a1.91,1.91,0,0,1,3.82,0h6.68a1.91,1.91,0,0,1,3.82,0H22.5V15.82l-4.77-1.91-2.29-3.06A1.91,1.91,0,0,0,13.91,10.09Z" />
           <circle cx="16.77" cy="20.59" r="1.91" />
           <circle cx="6.27" cy="20.59" r="1.91" />
