--- a/index.html
+++ b/index.html
@@ -5766,12 +5766,12 @@
                   const bgColor = darkMode ? 'bg-gray-700/40 border-gray-700/60' : 'bg-gray-50/50 border-gray-100';
 
                   return (
-                    <div className={`${bgColor} border-l-4 ${color} border rounded-r-xl p-4 shadow-sm transition-all`}>
-                      <div className={`font-black mb-3 uppercase tracking-wider text-sm ${darkMode ? 'text-gray-100' : 'text-gray-900'}`}>{name}</div>
-                      <div className={`text-sm space-y-2 tabular-nums ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
+                    <div className={`${bgColor} border-l-4 ${color} border rounded-r-xl p-3 shadow-sm transition-all`}>
+                      <div className={`font-black mb-2 uppercase tracking-wider text-xs truncate whitespace-nowrap ${darkMode ? 'text-gray-100' : 'text-gray-900'}`}>{name}</div>
+                      <div className={`text-xs space-y-1.5 tabular-nums ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
                         <div className="flex justify-between items-baseline">
                           <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>Goals:</span>
-                          <span className="font-bold text-lg">{score}</span>
+                          <span className="font-bold">{score}</span>
                         </div>
                         <div className="flex justify-between items-baseline">
                           <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>SOG:</span>
@@ -5785,7 +5785,7 @@
                           <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>SA:</span>
                           <span className="font-bold">{shotsAgainst}</span>
                         </div>
-                        <div className={`flex justify-between items-baseline border-t pt-2 mt-1 ${darkMode ? 'border-gray-700/50' : 'border-gray-200'}`}>
+                        <div className={`flex justify-between items-baseline border-t pt-1.5 mt-1 ${darkMode ? 'border-gray-700/50' : 'border-gray-200'}`}>
                           <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>SVS %:</span>
                           <span className="font-bold">{calcSP(saves, oppScore)}%</span>
                         </div>
@@ -5880,7 +5880,7 @@
                                             const foPct = foTotal === 0 ? '-' : ((foPlus / foTotal) * 100).toFixed(0);
                                             return (
                                               <tr key={pNum} className={`border-t ${darkMode ? 'border-gray-700/50 hover:bg-gray-700/30 text-gray-300' : 'border-gray-100 hover:bg-gray-50 text-gray-700'} transition-colors tabular-nums`}>
-                                                <td className="font-bold px-2 py-2 text-sm">{pNum}</td>
+                                                <td className="font-bold px-2 py-2 text-xs">{pNum}</td>
                                                 <td className="text-center px-2 py-2 text-xs font-bold">{pStats?.['G'] || 0}</td>
                                                 <td className="text-center px-2 py-2 text-xs font-bold">{pStats?.['A'] || 0}</td>
                                                 <td className="text-center px-2 py-2 text-xs font-bold">
@@ -5951,12 +5951,12 @@
                     const color = darkMode ? (team === 'home' ? 'bg-blue-900 bg-opacity-30 border-blue-700' : 'bg-red-900 bg-opacity-30 border-red-700') : (team === 'home' ? 'bg-blue-50' : 'bg-red-50');
 
                     return (
-                      <div key={team} className={`${darkMode ? 'bg-gray-700/40 border-gray-700/60' : 'bg-gray-50/50 border-gray-100'} border-l-4 ${team === 'home' ? 'border-l-blue-500' : 'border-l-red-500'} border rounded-r-xl p-4 transition-all shadow-sm`}>
-                        <div className={`font-black mb-3 uppercase tracking-wider text-sm ${darkMode ? 'text-gray-100' : 'text-gray-900'}`}>{name}</div>
-                        <div className={`text-sm space-y-2 tabular-nums ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
+                      <div key={team} className={`${darkMode ? 'bg-gray-700/40 border-gray-700/60' : 'bg-gray-50/50 border-gray-100'} border-l-4 ${team === 'home' ? 'border-l-blue-500' : 'border-l-red-500'} border rounded-r-xl p-3 transition-all shadow-sm`}>
+                        <div className={`font-black mb-2 uppercase tracking-wider text-xs truncate whitespace-nowrap ${darkMode ? 'text-gray-100' : 'text-gray-900'}`}>{name}</div>
+                        <div className={`text-xs space-y-1.5 tabular-nums ${darkMode ? 'text-gray-300' : 'text-gray-700'}`}>
                           <div className="flex justify-between items-baseline">
                             <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>Goals:</span>
-                            <span className="font-bold text-lg">{score}</span>
+                            <span className="font-bold">{score}</span>
                           </div>
                           <div className="flex justify-between items-baseline">
                             <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>SOG:</span>
@@ -5970,7 +5970,7 @@
                             <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>SA:</span>
                             <span className="font-bold">{shotsAgainst}</span>
                           </div>
-                          <div className={`flex justify-between items-baseline border-t pt-2 mt-1 ${darkMode ? 'border-gray-700/50' : 'border-gray-200'}`}>
+                          <div className={`flex justify-between items-baseline border-t pt-1.5 mt-1 ${darkMode ? 'border-gray-700/50' : 'border-gray-200'}`}>
                             <span className={`${darkMode ? 'text-gray-400' : 'text-gray-500'} font-medium`}>SVS %:</span>
                             <span className="font-bold">{calcSP(saves, oppScore)}%</span>
                           </div>
@@ -6036,7 +6036,7 @@
 
                                         return (
                                           <tr key={pNum} className={`border-t ${darkMode ? 'border-gray-700/50 hover:bg-gray-700/30 text-gray-300' : 'border-gray-100 hover:bg-gray-50 text-gray-700'} transition-colors tabular-nums`}>
-                                            <td className="font-bold px-2 py-2 text-sm">{pNum}</td>
+                                            <td className="font-bold px-2 py-2 text-xs">{pNum}</td>
                                             <td className="text-center px-2 py-2 text-xs font-bold">{pStats?.['G'] || 0}</td>
                                             <td className="text-center px-2 py-2 text-xs font-bold">{pStats?.['A'] || 0}</td>
                                             <td className="text-center px-2 py-2 text-xs font-bold">{plusMinus >= 0 ? '+' : ''}{plusMinus}</td>
