Caps for main screen tabs

--- a/index.html
+++ b/index.html
@@ -5660,7 +5660,7 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
               <div className="max-w-6xl mx-auto flex">
                 {['stats', 'timeline', 'audio', 'referee', ...(externalLinkUrl ? ['external'] : [])].map(tab => (
                   <button key={tab} onClick={() => setActiveTab(tab)} className={`flex-1 py-3 font-semibold text-sm ${activeTab === tab ? (darkMode ? 'bg-gray-600 text-white' : 'bg-blue-600 text-white') : (darkMode ? 'bg-gray-700 text-gray-400' : 'bg-gray-100 text-gray-600')}`}>
-                    {tab === 'audio' ? 'Audio' : tab === 'stats' ? 'Stats' : tab === 'timeline' ? 'Timeline' : tab === 'referee' ? 'Referee' : externalLinkTitle || 'Link'}
+                    {tab === 'audio' ? 'AUDIO' : tab === 'stats' ? 'STATS' : tab === 'timeline' ? 'TIMELINE' : tab === 'referee' ? 'REFEREE' : externalLinkTitle || 'Link'}
                   </button>
                 ))}
               </div>
