--- a/index.html
+++ b/index.html
@@ -2813,12 +2813,10 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                         setPenaltyTimelineCollapsed(false);
                       }
                     }}
-                    disabled={isViewer}
-                    className={`px-3 py-1 rounded text-sm font-bold ${isViewer
-                      ? 'bg-gray-500 cursor-not-allowed opacity-50'
-                      : penaltyWizardOpen
-                        ? (darkMode ? 'bg-gray-600 text-white' : 'bg-yellow-400 text-blue-900')
-                        : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'
+                    disabled={false}
+                    className={`px-3 py-1 rounded text-sm font-bold ${penaltyWizardOpen
+                      ? (darkMode ? 'bg-gray-600 text-white' : 'bg-yellow-400 text-blue-900')
+                      : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'
                       }`}
                   >
                     Penalty
@@ -2836,12 +2834,10 @@ if (trackingMode === 'advanced' && isMultiplayer && matchRef.current) {
                         setOtherTimelineCollapsed(false);
                       }
                     }}
-                    disabled={isViewer}
-                    className={`px-3 py-1 rounded text-sm font-bold ${isViewer
-                      ? 'bg-gray-500 cursor-not-allowed opacity-50'
-                      : playerStatsMoment === 'Other'
-                        ? (darkMode ? 'bg-gray-600 text-white' : 'bg-yellow-400 text-blue-900')
-                        : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'
+                    disabled={false}
+                    className={`px-3 py-1 rounded text-sm font-bold ${playerStatsMoment === 'Other'
+                      ? (darkMode ? 'bg-gray-600 text-white' : 'bg-yellow-400 text-blue-900')
+                      : darkMode ? 'bg-gray-700' : 'bg-white bg-opacity-20'
                       }`}
                   >
                     Other
